fix alignfull in image block

--- a/assets/styles/blocks/_image.scss
+++ b/assets/styles/blocks/_image.scss
@@ -2,6 +2,15 @@
  * Image blocks
  */
 
+.gutenberg {
+  .wp-block-image {
+    &.alignfull {
+      margin-left: -15px;
+      margin-right: -15px;
+    }
+  }
+}
+
 .wp-block-image {
   figcaption {
     text-align: center;
